Fix text alignment
Add meta tag

--- a/style-campos.css
+++ b/style-campos.css
@@ -202,6 +202,7 @@ input[type="number"]::-webkit-inner-spin-button {
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;
+	text-align-last:center;
 }
 
 .input_component.letter >:first-child {
